@startuml

skinparam monochrome true
skinparam classAttributeIconSize 0

package "Sightseeing.DI" {
  class BllDependencyRegistration {
    +AddSightSeeingBll(services: IServiceCollection): void
  }

  class DalDependencyRegistration {
    +AddSightSeeingDal(services: IServiceCollection, connectionString: string): void
  }

  class ServiceModule {
    +Load(): void
  }
}

' Dependencies
BllDependencyRegistration --> IUserService
BllDependencyRegistration --> IPlaceService
BllDependencyRegistration --> IReviewService
BllDependencyRegistration --> IQuestionService
BllDependencyRegistration --> IAnswerService
BllDependencyRegistration --> MappingProfile

DalDependencyRegistration --> SightSeeingDbContext
DalDependencyRegistration --> IUnitOfWork

ServiceModule --> IUnitOfWork
ServiceModule --> IUserService
ServiceModule --> IPlaceService
ServiceModule --> IReviewService
ServiceModule --> IQuestionService
ServiceModule --> IAnswerService

@enduml